# py3status-toggl

./: py3status-toggl.py  pyproject.toml
